{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 199,
  "lineage": "ef10f2de-dfec-8ca6-0d5e-c06ab28f0cb7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0821e601b0426ccf5",
            "arn": "arn:aws:ec2:us-east-1:960938931205:instance/i-0084c7b9490245690",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_ssm_instance_profile",
            "id": "i-0084c7b9490245690",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07db138e7ea050b2c",
            "private_dns": "ip-10-30-1-193.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.1.193",
            "public_dns": "ec2-107-22-13-136.compute-1.amazonaws.com",
            "public_ip": "107.22.13.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e2ed37a34d2a9d0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003422557eb4cc2ea",
            "tags": {
              "Name": "pl-atlas-test"
            },
            "tags_all": {
              "Name": "pl-atlas-test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cd0cc6ad0aaa7a3c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_instance_profile",
            "aws_iam_role.ec2-ssm-role",
            "aws_security_group.primary_default",
            "aws_subnet.primary-az1",
            "aws_vpc.primary",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960938931205:internet-gateway/igw-0b17c26a189f681c3",
            "id": "igw-0b17c26a189f681c3",
            "owner_id": "960938931205",
            "vpc_id": "vpc-0e8fb569706f5b5e6"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "primary-internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b17c26a189f681c3",
            "id": "r-rtb-00f52ca5534852c321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00f52ca5534852c32",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.primary",
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "primary_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960938931205:security-group/sg-0cd0cc6ad0aaa7a3c",
            "description": "Default security group for all instances in vpc-0e8fb569706f5b5e6",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd0cc6ad0aaa7a3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default-20230907201114637200000001",
            "name_prefix": "default-",
            "owner_id": "960938931205",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8fb569706f5b5e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960938931205:subnet/subnet-003422557eb4cc2ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003422557eb4cc2ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "960938931205",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e8fb569706f5b5e6"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960938931205:subnet/subnet-0ba32e8d12df3e763",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba32e8d12df3e763",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "960938931205",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e8fb569706f5b5e6"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960938931205:vpc/vpc-0e8fb569706f5b5e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-04bd571dcf8e06633",
            "default_route_table_id": "rtb-00f52ca5534852c32",
            "default_security_group_id": "sg-0f86554a34542a220",
            "dhcp_options_id": "dopt-7e7f9c18",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e8fb569706f5b5e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00f52ca5534852c32",
            "owner_id": "960938931205"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ptfe_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:960938931205:vpc-endpoint/vpce-040f1165e3bb42b7f",
            "dns_entry": [
              {
                "dns_name": "vpce-040f1165e3bb42b7f-070u9k48.vpce-svc-0ccabf0efab61bf2a.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-040f1165e3bb42b7f-070u9k48-us-east-1a.vpce-svc-0ccabf0efab61bf2a.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-040f1165e3bb42b7f-070u9k48-us-east-1b.vpce-svc-0ccabf0efab61bf2a.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-040f1165e3bb42b7f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02800cb71da51abb0",
              "eni-0a2983f0b0d2dd77f"
            ],
            "owner_id": "960938931205",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0cd0cc6ad0aaa7a3c"
            ],
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0ccabf0efab61bf2a",
            "state": "available",
            "subnet_ids": [
              "subnet-003422557eb4cc2ea",
              "subnet-0ba32e8d12df3e763"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e8fb569706f5b5e6"
          },
          "dependencies": [
            "aws_security_group.primary_default",
            "aws_subnet.primary-az1",
            "aws_subnet.primary-az2",
            "aws_vpc.primary",
            "mongodbatlas_privatelink_endpoint.atlaspl"
          ]
        }
      ]
    }
  ]
}